毛利统计（运营）

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -233,8 +233,8 @@
                                         </dd>
                                         <dd id="city_net"><a href="javascript:goToCityNet()"><span class="fa fa-institution"></span>线下网络体系</a></dd>
                                         <dd id="store_rent"><a href="javascript:goToStoreRent()"><span class="fa fa-bicycle"></span>门店租赁统计</a></dd>
-                                        <!--<dd style="position:relative"><a href="javascript:goToProfitStat()"><span class="fa fa-gg"></span>毛利统计（运营）</a>-->
-                                            <!--<img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>-->
+                                        <dd style="position:relative"><a href="javascript:goToProfitStat()"><span class="fa fa-gg"></span>毛利统计（运营）</a>
+                                            <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
                                         <!--<dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-cubes"></span>产品运营</a></dd>
                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-comments-o"></span>混片情况</a></dd>-->
                                     </dl>
