门店编号赋值

--- a/WebContent/crm/dynamicData_profit_analysis.html
+++ b/WebContent/crm/dynamicData_profit_analysis.html
@@ -510,6 +510,7 @@
 
             $("#city_name_tradetype2").val(cityName);
             $("#city_name_tradetype2").attr("readonly",true);
+            $("#store_id_tradetype").val(storeNo);
             $("#store_name_tradetype").val(storeName);
             $("#store_name_tradetype").attr("readonly",true)
         }
