事业群毛利优化（real_store_id）

--- a/WebContent/crm/dynamicData_profit_analysis.html
+++ b/WebContent/crm/dynamicData_profit_analysis.html
@@ -562,6 +562,8 @@
         //从首页大屏毛利散点图跳转  参数赋值
         if(time!=null){
             if(redirectTag=='profit'){
+                $("#city_id_tradetype2").val(initCity);
+                $("#city_name_tradetype2").val(cityName);
                 $("#store_id_tradetype").val(storeNo);
                 $("#store_name_tradetype").val(storeName);
                 $("#deptnamepayhide").show();
