优化毛利统计中散点图跳转

--- a/WebContent/crm/dynamicData_profit_analysis.html
+++ b/WebContent/crm/dynamicData_profit_analysis.html
@@ -569,6 +569,8 @@
                 $("#deptnamepayhide").show();
                 $("#deptSelect").attr("disabled",false);
                 $("#deptClick").prop("checked",true);
+                $('#auto_date_store').data('daterangepicker').setStartDate(time.split('-')[0]);
+                $('#auto_date_store').data('daterangepicker').setEndDate(time.split('-')[1]);
                 searchInfo_store_step1(1);
             }
 		}
