--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -226,15 +226,15 @@
               <table class="table table-striped table-bordered" id="preopenstore">
                 <tr>
                   <th width="50"></th>
-                  <th colspan="3">2018年自营店拓展进度</th>
-                  <th colspan="3">2018年合作店拓展进度</th>
+                  <th colspan="3" id="store1">2018年自营店拓展进度</th>
+                  <th colspan="3" id="store2">2018年合作店拓展进度</th>
                 </tr>
                 <tr>
                   <td></td>
                   <td>任务目标</td>
                   <td>已开业数量</td>
                   <td>完成率</td>
-                  <td>18年任务目标</td>
+                  <td>任务目标</td>
                   <td>已开业数量</td>
                   <td>完成率</td>
                 </tr>
@@ -246,15 +246,15 @@
               <table class="table table-striped table-bordered" id="newopenstore">
                 <tr>
                   <th width="50"></th>
-                  <th colspan="3">2018年自营店拓展进度</th>
-                  <th colspan="3">2018年合作店拓展进度</th>
+                  <th colspan="3" id="store3">2018年自营店拓展进度</th>
+                  <th colspan="3" id="store4">2018年合作店拓展进度</th>
                 </tr>
                 <tr>
                   <th></th>
                   <td>任务目标</td>
                   <td>已开业数量</td>
                   <td>完成率</td>
-                  <td>18年任务目标</td>
+                  <td>任务目标</td>
                   <td>已开业数量</td>
                   <td>完成率</td>
                 </tr>
