修改结算数据年份问题

--- a/WebContent/crm/download_file.html
+++ b/WebContent/crm/download_file.html
@@ -394,10 +394,7 @@
     var max_year = cur_date.getFullYear();
     var now_date =cur_date.getDate();
     var max_month = "";
-    if(now_month==0){
-        max_year =cur_date.getFullYear()-1;
-        max_month = "12";
-    }
+
     if(now_month>0&&now_month<10){
         max_month = "0"+now_month;
         if(now_month<9){
@@ -406,8 +403,15 @@
             now_month = now_month+1;
         }
     }else{
-        max_month = now_month;
-        now_month = now_month+1;
+        if(now_month==0){
+            max_year =cur_date.getFullYear()-1;
+            max_month = "12";
+            now_month = now_month+1;
+        }else{
+            max_month = now_month;
+            now_month = now_month+1;
+        }
+
     }
     var year_month = max_year+"-"+max_month;
     var max_date = "";
@@ -422,9 +426,14 @@
         }else{
                 now_date=31;
             }
+            if(max_month=="12"){
                 max_date = max_year+"-"+now_month +"-"+now_date;
+
+            }else{
+                max_date = cur_date.getFullYear()+"-"+now_month +"-"+now_date;
+            }
     }else{
-        max_date = max_year+"-"+now_month +"-"+(now_date-1);
+        max_date = cur_date.getFullYear()+"-"+now_month +"-"+(now_date-1);
     }
     laydate.render({//月份控件
         elem:'#country_month',
