--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -215,7 +215,7 @@
           </div>
         </div>
         <div class="box box-default" style="margin-top: 50px;">
-          <div class="box-header h1 text-light-blue"><strong>18年分城市拓展进度</strong></div>
+          <div class="box-header h1 text-light-blue"><strong>分城市拓展进度</strong></div>
           <div class="box-body">
             <div class="col-sm-12" id="main12" style="height: 400px;"></div>
             <div class="col-sm-6" id="main13" style="height: 400px;"></div>
